Creacion de galeria de imagenes y mejoras en el home

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,4 +1,4 @@
-body {
+body, html {
     margin: 0;
     padding: 0;
     font-family: "Barlow Condensed", serif;
@@ -7,6 +7,7 @@ body {
     color: #365e32;
     background-color: #f7f4ea;
     box-sizing: border-box;
+    width: 100%;
   }
   
   .home-container {
@@ -84,8 +85,9 @@ body {
   
   /* Features Section */
   .home-features {
-    display: flex;
-    justify-content: space-around;
+    display:block;
+    /* justify-content: space-around; */
+    text-align: center;
     gap: 20px;
     padding: 40px 5%;
     background-color: #f7f4ea;
@@ -133,13 +135,15 @@ body {
   /* bidrwatching container */
 
   .birdwatching {
+    display: flex;
+    justify-content: space-between;
     padding-top: 3rem;
     padding-bottom: 3rem;
     /* background-color: #e0e6df; */
 
   }
   .birdwatching h4 {
-    padding-top: 25%;
+    /* padding-top: 25%; */
     font-size: 3rem;
   }
 
@@ -153,8 +157,25 @@ body {
     padding-bottom: 2rem;
   }
 
-  .accomodations p{
-    padding-top: 40%;
+  
+
+  /* rounded-img */
+
+  .rounded-img {
+    border-radius: 15px; /* Bordes redondeados */
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
+      width: 100%; /* Ajusta la imagen al ancho de la etiqueta */
+      height: auto; /* Mantiene las proporciones */
+      display: block; /* Asegura que respete márgenes y alineación */
+  }
+
+  .left-content {
+    padding-right: 3rem;
+    margin-left: -4rem;
+  }
+  .right-content {
+    padding-left: 3rem;
+    margin-right: -6rem;
   }
 
  
