--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -5,6 +5,7 @@
     padding-bottom: 1rem;
     padding-left: 1rem;
     font-size: 1.2rem;
-    width: 100%;
-    margin-top: -6%;
+    width: auto;
+    
+
 }
