--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -4,6 +4,7 @@
     padding: 2rem 1rem;
     font-size: 1.2rem;
     text-align: center; /* Centrar texto en pantallas pequeñas */
+    position: sticky;
 }
 
 .footer .row {
